# Rufus

./: .gitignore  README.md  example_api_flow.py  pyproject.toml  requirements.txt  setup.cfg
Rufus/: __init__.py  client.py  crawler.py  logger.py  rate_limiter.py  scraper.py  synthesizer.py  utils.py
Rufus/Rufus.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
fixtures/html_samples/: malformed_page.html  simple_page.html
outputs/: structured_document_20250313_103620.json  structured_document_20250313_105011.json  structured_document_20250313_112547.json  structured_document_20250313_124910.json  structured_document_20250313_125730.json  structured_document_20250313_134306.json  structured_document_20250313_150609.json  web_content_20250313_081605.txt  web_content_20250313_112547.txt  web_content_20250313_124910.txt  web_content_20250313_134306.txt
rufus_scraper.egg-info/: PKG-INFO
tests/: __init__.py  test_crawler.py  test_integration.py  test_scraper.py
