[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Rufus"
version = "0.1.0"
description = "A web scraping and content synthesis tool"
readme = "README.md"
authors = [
    {name = "Dhairya Gundechia", email = "gundechia.d@northeastern.edu"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "annotated-types>=0.7.0",
    "anyio>=4.8.0",
    "attrs>=25.3.0",
    "babel>=2.17.0",
    "beautifulsoup4>=4.13.3",
    "certifi>=2025.1.31",
    "chardet>=5.2.0",
    "charset-normalizer>=3.4.1",
    "courlan>=1.3.2",
    "cssselect>=1.3.0",
    "dateparser>=1.2.1",
    "distro>=1.9.0",
    "exceptiongroup>=1.2.2",
    "goose3>=3.1.19",
    "htmldate>=1.9.3",
    "httpcore>=1.0.7",
    "httpx>=0.28.1",
    "idna>=3.10",
    "jusText>=3.0.2",
    "langdetect>=1.0.9",
    "lxml>=5.3.1",
    "lxml_html_clean>=0.4.1",
    "openai>=1.66.3",
    "outcome>=1.3.0.post0",
    "packaging>=24.2",
    "pillow>=11.1.0",
    "pyahocorasick>=2.1.0",
    "pydantic>=2.10.6",
    "PySocks>=1.7.1",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.0.1",
    "pytz>=2025.1",
    "PyYAML>=6.0.2",
    "readability-lxml>=0.8.1",
    "regex>=2024.11.6",
    "requests>=2.32.3",
    "selenium>=4.29.0",
    "trafilatura>=2.0.0",
    "webdriver-manager>=4.0.2",
    "h11>=0.14.0",
    "jiter>=0.9.0",
    "pydantic_core>=2.27.2",
    "responses>=0.25.7",
    "six>=1.17.0",
    "sniffio>=1.3.1",
    "sortedcontainers>=2.4.0",
    "soupsieve>=2.6",
    "tld>=0.13",
    "tqdm>=4.67.1",
    "trio>=0.29.0",
    "trio-websocket>=0.12.2",
    "typing_extensions>=4.12.2",
    "tzlocal>=5.3.1",
    "urllib3>=2.3.0",
    "websocket-client>=1.8.0",
    "wsproto>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=4.0.0",
]

[project.urls]
"Homepage" = "https://github.com/Thin-Equation/Rufus"
"Bug Tracker" = "https://github.com/Thin-Equation/Rufus/issues"

[project.scripts]
rufus-scraper = "example_api_flow:main"

[tool.setuptools.packages.find]
include = ["Rufus*"]
exclude = ["tests*", "outputs*", "fixtures*"]
