[metadata]
name = Rufus
version = 0.1.0
author = Your Name
author_email = your.email@example.com
description = A web scraping and content synthesis tool.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Thin-Equation/rufus-scraper  # Replace with your repo URL
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
packages = find:
python_requires = >=3.8

[options.packages.find]
where = Rufus

[options.entry_points]
console_scripts =
    rufus-scraper=example_api_flow:main  # CLI entry point, optional
