[metadata]
name = Rufus
version = 0.1.0
author = Dhairya Gundechia
author_email = gundechia.d@northeastern.edu
description = A web scraping and content synthesis tool.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Thin-Equation/Rufus  
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >=3.8

[options.packages.find]
where = Rufus

[options.entry_points]
console_scripts =
    rufus-scraper=example_api_flow:main  
